<resources>
    <string name="app_name">Culture Guide</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="email">E-mail</string>
    <string name="emailHint">example@Example.com</string>
    <string name="password">Password</string>
    <string name="createAccount">Don\'t have an account? Create One</string>
    <string name="title_activity_addevent">Create Event</string>
    <string name="title_activity_event_main_activty">EventMainActivty</string>
    <string name="title_activity_create_event_activty">CreateEventActivty</string>
    <string name="title_activity_remove_event">RemoveEvent</string>
    <string name="title_activity_update_event_activty">UpdateEventActivty</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="signing_in">Signing in</string>
    <string name="signing_up">Signing up</string>
    <string name="wait">Please wait...</string>
    <string name="blank_fields">Please fill blank fields</string>
    <string name="password_not_matching">Passwords don\'t match</string>

    <!--Code Wise Strings-->
    <string name="sign_in_success">Successful sign in</string>
    <string name="sign_in_fail">Email or password doesn\'t match</string>
    <string name="blank_field">Please fill empty blank field</string>

    <!--Strings of the drawer-->
    <string name="exit">Exit</string>
    <string name="home_page">Home Page</string>
    <string name="create_Event">Create Event</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="friends">Friends</string>
    <string name="invitations">Invitations</string>
    <string name="favorites">Favorites</string>

    <!--Strings of Home Page-->
    <string name="attend">Attend</string>
    <string name="event_created">created event</string>
    <string name="refreshPosts">refresh</string>

    <!--edit profile related-->
    <string name="editProfile">Edit Profile</string>
    <string name="editEmail">Edit E-mail</string>
    <string name="changePassword">Change Password</string>
    <string name="confirmNewPassword">Confirm Password</string>
    <string name="categories">Categories</string>
    <string name="organizationName">Organization Name</string>
    <string name="userName">User Name</string>
    <string name="organization">Organization</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="briefDescription">You can add organization vision, interests and activities</string>
    <string name="title_activity_edit_profile_organization">Edit Profile Organization</string>

    <!--AdOrgHomePagePage Relateed-->
    <string name="edit">edit</string>
    <string name="users">Users</string>
    <string name="admins">Admins</string>
    <string name="organizations">Organizations</string>
    <string name="events">Events</string>
    <string name="search">Search</string>

    <!--Fragments-->
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="favorite_events">favorite Events</string>

    <!--Event page-->
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="rate_event">Rate Event</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="invite">Invite</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="created_by">Created by</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="event_title">Event Title</string>

    <!--SideBar-->
    <string name="invited">invited you to attend</string>
    <string name="no_invitations">No invitations</string>
    <string name="add">Add</string>
    <string name="Interests">Interests</string>
    <string name="interested">INTERESTED</string>
    <string name="not_interested">NOT INTERESTED</string>
    <string name="admin_email">E-mail</string>
    <string name="admin_password">Password</string>
    <string name="admin_password_confirm">Confirm Password</string>
    <string name="add_admin">Add New Admin</string>
    <string name="search_admin">Enter Admin E-mail</string>
    <string name="search_category">Enter Category ID</string>
    <string name="search_event">Enter Event ID</string>
    <string name="search_organization">Enter Organization E-mail</string>
    <string name="search_user">Enter User E-mail</string>
    <string name="category_name">Enter Category Name</string>
    <string name="add_category">Add Category</string>

</resources>
