<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/invitations" />
        <item
            android:id="@+id/nav_interests"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/Interests" />
    </group>

    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
