<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_create_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/create_Event" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/edit_profile" />
    </group>

    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="To be deeted" />-->
        </menu>
    </item>

</menu>
