<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ghorabaa.cultureguide.AdminHomepage.AdminHomepageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onViewCategoriesClicked"
            android:text="@string/categories"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onViewUsersClicked"
            android:text="@string/users"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onViewOrganizationsClicked"
            android:text="@string/organizations"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onViewAdminsClicked"
            android:text="@string/admins"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
