<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    tools:context="com.ghorabaa.cultureguide.Login.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"

        android:layout_gravity="center"

        android:layout_weight="2"

        android:src="@drawable/culture_logo"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"

            android:layout_marginTop="16dp"

            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:hint="@string/emailHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"

            android:layout_marginTop="16dp"

            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:hint="************" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="25dp"

            android:text="@string/sign_in" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/createAccount" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
