<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizationEvent.CreateEvent.CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGround"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backGroundDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/backGround">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/egyption_culture"
                        android:id="@+id/event_page_picture"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:layout_gravity="center"
                            android:textSize="25sp"
                            />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_title"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:id="@+id/create_event_title"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/categories"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:scrollbarSize="16dp"
                android:id="@+id/create_event_categories"
                >

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/about"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:hint="@string/about"
                android:id="@+id/create_event_about"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/location"
                />

            <EditText
                android:id="@+id/create_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:hint="@string/location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/date"
                />

            <DatePicker
                android:id="@+id/create_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarTextColor="@color/backGroundDark"
                android:headerBackground="@color/backGroundDark"
                android:yearListSelectorColor="@color/backGroundDark">

            </DatePicker>

            <TimePicker
                android:id="@+id/create_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:headerBackground="@color/backGroundDark"
                android:numbersSelectorColor="@color/backGroundDark">

            </TimePicker>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_Event"
                android:textSize="20sp"
                android:id="@+id/create_event_button"
                />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>
